test/expected/large/foothemedesigner/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    foo.com/duname: themedesign
    foo.com/duversion: 3.5.106-20190925.1569388169161
    foo.com/version: 3.5.106
  labels:
    app.kubernetes.io/name: foothemedesigner
    helm.sh/chart: foothemedesigner-3.5.106
  name: foothemedesigner
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: foothemedesigner
  type: ClusterIP
